# Mai_OOP_Lab2_V8

./: .gitignore  CMakeLists.txt  README.md
include/: seven.hpp
src/: main.cpp  seven.cpp
tests/: tests_01.cpp
